- fix typos - add terms.htm

--- a/js/i18n/en.json
+++ b/js/i18n/en.json
@@ -34,7 +34,7 @@
     "your_wallet_address": "YOUR WALLET ADDRESS",
 
     "sell_tokens": "SELL TOKENS",
-    "sell_tokens_desc": "Not Available Untill After The ICO.",
+    "sell_tokens_desc": "Not Available Until After The ICO.",
 
     "buy_tokens": "BUY WORLDBIT TOKEN WITH ETH",
     "choose_amount": "Choose Amount of Token(s) you want to buy",
@@ -44,7 +44,7 @@
     "buy_desc2": "Remember to keep a little ETH in this wallet! During the ICO you will be able to deploy portals and objects into the WorldBit system for only the cost of ETH gas!",
 
     "market_rates": "MARKET RATES",
-    "market_rates_desc": "Not Available Untill After The ICO.",
+    "market_rates_desc": "Not Available Until After The ICO.",
 
     "eth_market_rates": "ETH MARKET RATES",
     "price_usd": "Price USD",
